--- a/articles/templates/articles/articleslist.html
+++ b/articles/templates/articles/articleslist.html
@@ -9,14 +9,15 @@
     <link rel="stylesheet" href="{% static 'styles.css' %}">
   </head>
   <body>
-
-    <h1>
-      لیست مقالات :
-    </h1>
-    {% for article in articles %}
-    <h2><a href="#">{{article.title}}</a></h2>
-    <p>{{article.snipper}}</p>
-    <p>{{article.date}}</p>
-    {% endfor %}
+<div class="container">
+  <h1>
+    لیست مقالات :
+  </h1>
+  {% for article in articles %}
+  <h2><a href="#">{{article.title}}</a></h2>
+  <p>{{article.snipper}}</p>
+  <p>{{article.date}}</p>
+  {% endfor %}
+</div>
   </body>
 </html>
